// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders as expected when passing a small size 1`] = `
<button
  className="btn btn--default btn--undefined btn--small"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  
  Test Default Small Button
</button>
`;

exports[`Button renders as expected when passing a wallet icon 1`] = `
<button
  className="btn btn--default btn--undefined btn--normal"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span
    className="lab-icon lab-icon--wallet lab-icon--white lab-icon--petit lab-icon--btn__icon"
  />
  Test Default Wallet Button
</button>
`;

exports[`Button renders as expected when passing a warning skin 1`] = `
<button
  className="btn btn--default btn--warning btn--normal"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  
  Test Default Warning Button
</button>
`;

exports[`Button renders as expected when passing disabled as true 1`] = `
<button
  className="btn btn--default btn--undefined btn--normal"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  
  Test Default Disabled Button 1
</button>
`;

exports[`Button renders with base props 1`] = `
<button
  className="btn btn--default btn--undefined btn--normal"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  
  Test Default Button
</button>
`;
